--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="images/photographer.jpg" alt="">
+                    <img src="images/developer.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -181,16 +181,18 @@
     <footer class="py-5">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-5 col-lg-4 mb-5 mb-md-0">
-                    <a href="index.html">
-                        <div class="signature">
-                            <h5 class="signature-heading">Ayari Achref</h5>
-                            <h3 class="signature-subhead">Developer</h3>
+
+                <div class="col-12 col-md-5 col-lg-4 mb-5 mb-md-0 ">
+                    <h5 class="text-uppercace">Newsletter</h5>
+                    <p class="text-muted">Be sure to subscribe to our newsletter to recieve updates & special offers</p>
+                    <div class="input-group mb-3">
+                        <input type="text" placeholder="Email adress..." class="form-control">
+                        <div class="input-group-append">
+                            <button class="btn" type="button">
+                                <i class="far fa-paper-plane"></i>
+                            </button>
                         </div>
-                    </a>
-                    <small class="d-block mt-2 text-muted">
-                        &copy;Copyright 2020. all rights reserved. Ayari Achref
-                    </small>
+                    </div>
                 </div>
                 <div class="col-12 col-md-5 col-lg-4 mb-5 mb-md-0">
                     <h5 class="text-uppercace">Follow me</h5>
@@ -203,17 +205,17 @@
                     </ul>
                 </div>
                 <div class="col-12 col-md-5 col-lg-4 ">
-                    <h5 class="text-uppercace">Newsletter</h5>
-                    <p class="text-muted">Be sure to subscribe to our newsletter to recieve updates & special offers</p>
-                    <div class="input-group mb-3">
-                        <input type="text" placeholder="Email adress..." class="form-control">
-                        <div class="input-group-append">
-                            <button class="btn" type="button">
-                                <i class="far fa-paper-plane"></i>
-                            </button>
+                    <a href="index.html">
+                        <div class="signature">
+                            <h5 class="signature-heading">Ayari Achref</h5>
+                            <h3 class="signature-subhead">Developer</h3>
                         </div>
-                    </div>
+                    </a>
+                    <small class="d-block mt-2 text-muted">
+                        &copy;Copyright 2020. all rights reserved. Ayari Achref
+                    </small>
                 </div>
+
             </div>
         </div>
     </footer>
