--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Ayari Achref</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="dist/css/lightbox.min.css">
     <link rel="stylesheet" href="styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -125,7 +127,7 @@
     <section class="testimonial py-5">
         <div class="container">
             <div class="section-heading text-center" data-aos="flip-right">
-                <h1 class="heading-title">What peaple are saying</h1>
+                <h1 class="heading-title">What people are saying about us ?</h1>
             </div>
             <div class="row">
                 <div class="col-md-8 m-auto">
